# ParticleChromo3D_Plus

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  run.sh  setup.py
.github/workflows/: docker-image.yml  main.yml  pytest.yml
ParticleChromo3D/: Helper.py  Ps.py  Swarm.py  TransformVCM.py  particle_chromo_logger.py  pdbToNeo4j.py  runner_sp.py
ParticleChromo3D/templates/: form.html
config/: requirements.txt  requirements_test.txt
exampleIfs/: chr22_matrix.txt  test3ToSquare.txt
flask/: Helper.py  Ps.py  Swarm.py  TransformVCM.py  pdbToNeo4j.py  runner_sp.py
flask/templates/: form.html
help/: exampleCurlScript.bash  example_curl_scripts.md  example_import_lib.md  example_usage_as_script.md
results/: readme.md
tests/: test_helper.py  test_pdb_to_neo4j.py  test_ps_main.py  test_runner_sp.py  test_transform_vcm.py
tests/flask/: test_ps_main.py
website/: main.css  main.html
